@@ -2,6 +2,7 @@ package de.neemann.digital.gui.components.modification;
 
 import de.neemann.digital.draw.elements.Circuit;
 import de.neemann.digital.draw.elements.VisualElement;
+import de.neemann.digital.draw.library.ElementLibrary;
 import de.neemann.digital.lang.Lang;
 
 import static de.neemann.digital.gui.components.modification.ModificationOfVisualElement.getToolTipName;
@@ -23,7 +24,7 @@ public class ModifyInsertElement implements Modification {
     }
 
     @Override
-    public void modify(Circuit circuit) {
+    public void modify(Circuit circuit, ElementLibrary library) {
         circuit.add(new VisualElement(element));
     }
 
