@@ -743,6 +743,7 @@ Sind evtl. die Namen der Variablen nicht eindeutig?</string>
     <string name="mod_redo_N">Wiederherstellen: {0}</string>
     <string name="mod_circuitAttrModified">Schaltungsattribute verändert.</string>
     <string name="mod_modifiedMeasurementOrdering">Reihenfolge der Messwerte verändert.</string>
+    <string name="mod_set_N_BitsToSelection">In selektierten Elementen die Zahl der Daten-Bits auf {0} gesetzt.</string>
 
     <string name="lib_Logic">Logisch</string>
     <string name="lib_arithmetic">Arithmetik</string>
@@ -1001,6 +1002,7 @@ eine &lt;a href=&quot;https://github.com/hneemann/Digital/issues/new?labels=enha
     <string name="msg_modelHasErrors">Es kann nur eine fehlerfreie Schaltung exportiert werden!</string>
     <string name="msg_noKVMapAvailable">Keine KV-Tafel verfügbar!</string>
     <string name="msg_dataNotUpdatedAnymore">Daten werden nicht mehr aktualisiert!</string>
+    <string name="msg_stringIsNotANumber_N">Der String {0} ist keine Zahl!</string>
 
     <string name="ok">Ok</string>
     <string name="rot_0">0°</string>
